tests/paczka1/small_fuzzy/85096203.err
Error in line 2: pfozTO A54 71,3
Error in line 1: G0DwS7 A346 34,4
Error in line 3: pfozTO A878 23,6
Error in line 4: G0DwS7 A421 66,5
Error in line 16: Dtv04mO A54 27,49
